// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Effects selector getEffectByImpact should return effects with \`Health\` impact 1`] = `
Array [
  Object {
    "impact": "HEALTH",
    "ownerId": "p_unit1",
    "targetingScope": "OTHER_FRIENDLY_MINIONS",
    "type": "HEALTH",
    "value": 2,
  },
]
`;

exports[`Effects selector getEffectByUnitId should return effects of unit 1`] = `
Array [
  Object {
    "impact": "HEALTH",
    "ownerId": "p_unit1",
    "targetingScope": "OTHER_FRIENDLY_MINIONS",
    "type": "HEALTH",
    "value": 2,
  },
  Object {
    "impact": "ATTACK",
    "ownerId": "p_unit1",
    "targetingScope": "OTHER_FRIENDLY_MINIONS",
    "type": "ATTACK",
    "value": 1,
  },
]
`;

exports[`Effects selector getEffectByUserId should return effects of user 1`] = `
Array [
  Object {
    "impact": "HEALTH",
    "ownerId": "p_unit1",
    "targetingScope": "OTHER_FRIENDLY_MINIONS",
    "type": "HEALTH",
    "value": 2,
  },
  Object {
    "impact": "ATTACK",
    "ownerId": "p_unit1",
    "targetingScope": "OTHER_FRIENDLY_MINIONS",
    "type": "ATTACK",
    "value": 1,
  },
]
`;

exports[`Effects selector getEffects should return list of effects 1`] = `
Array [
  Object {
    "impact": "HEALTH",
    "ownerId": "p_unit1",
    "targetingScope": "OTHER_FRIENDLY_MINIONS",
    "type": "HEALTH",
    "value": 2,
  },
  Object {
    "impact": "ATTACK",
    "ownerId": "p_unit1",
    "targetingScope": "OTHER_FRIENDLY_MINIONS",
    "type": "ATTACK",
    "value": 1,
  },
]
`;

exports[`Effects selector getEffectsApplicableToUnit should return all effects which can be applicable to unit (impact on its behavior) 1`] = `Array []`;
